Fix sections layout problems

--- a/assets/styles/components/_icons.scss
+++ b/assets/styles/components/_icons.scss
@@ -53,6 +53,39 @@
 .icon-add-playlist {
     background-image: url("../img/icons/add-to-playlist.svg");
 }
+.icon-add-friend {
+    background-image: url("../img/icons/add_friend.svg");
+}
+.icon-add-library {
+    background-image: url("../img/icons/add_library.svg");
+}
+.icon-add-music {
+    background-image: url("../img/icons/add_music.svg");
+}
+.icon-album {
+    background-image: url("../img/icons/album.svg");
+}
+.icon-artist {
+    background-image: url("../img/icons/artist.svg");
+}
+.icon-artists {
+    background-image: url("../img/icons/artists.svg");
+}
+.icon-audiobook {
+    background-image: url("../img/icons/audiobook.svg");
+}
+.icon-big_star {
+    background-image: url("../img/icons/big_star.svg");
+}
+.icon-bookmark {
+    background-image: url("../img/icons/bookmark.svg");
+}
+.icon-burger {
+    background-image: url("../img/icons/burger.svg");
+}
+.icon-by_photo {
+    background-image: url("../img/icons/by_photo.svg");
+}
 .icon-download-rounded {
     background-image: url("../img/icons/download.svg");
 }
